bindata/cert-manager-deployment/network-policy/operator-allow-egress-to-api-server.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: operator-allow-egress-to-api-server
  namespace: ${NAMESPACE}
spec:
  podSelector:
    matchLabels:
      name: cert-manager-operator
  policyTypes:
    - Egress
  egress:
    - ports:
        - protocol: TCP
          port: 6443
