bindata/cert-manager-deployment/network-policy/operator-allow-ingress-to-metrics.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: operator-allow-ingress-to-metrics
  namespace: ${NAMESPACE}
spec:
  podSelector:
    matchLabels:
      name: cert-manager-operator
  policyTypes:
    - Ingress
  ingress:
    - ports:
        - protocol: TCP
          port: 8443
