bindata/cert-manager-deployment/network-policy/operator-deny-all-pod-selector.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: operator-deny-all-traffic
  namespace: ${NAMESPACE}
spec:
  podSelector:
    matchLabels:
      name: cert-manager-operator
  policyTypes:
    - Ingress
    - Egress
